# tide

./: .gitignore  Cargo.toml  README.md  compose.yml
migrations/: 20241121040031_create_trip_kind_table.sql  20241121060030_create_location_table.sql  20241121060320_create_trip_table.sql  20241121060436_create_equipment_table.sql  20241121060521_create_trip_equipment_table.sql  20241121060604_create_customer_table.sql  20241121060655_create_booking_table.sql  20241121060840_create_booking_equipment_table.sql  20241121061024_create_participant_table.sql  20241121061050_create_booking_participant_table.sql  20241121061137_create_waiver_table.sql  20241121061244_create_participant_waiver_table.sql
src/lib/: config.rs  domain.rs
src/lib/domain/: booking.rs
src/lib/domain/booking/: models.rs  ports.rs  service.rs
src/lib/domain/booking/models/: booking.rs  customer.rs  equipment.rs  trip.rs  waiver.rs
src/lib/inbound/: http.rs
src/lib/outbound/: postgres.rs
src/lib/outbound/postgres/: booking_repository.rs
